# safehike

./: .gitignore  README.md  pyproject.toml
safehike-ui/: package-lock.json  package.json
safehike-ui/app/: layout.tsx  page.tsx
safehike-ui/app/api/copilotkit/: route.ts
safehike-ui/app/components/: CustomAssistantMessage.tsx  ThinkingBubble.tsx  ToolCall.tsx
safehike_agent/: agent.py
